# bookmarks-curses

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: python-publish.yml
bookmarks_curses/: __init__.py  __main__.py  db.py  import_diigo.py  utils.py
bookmarks_curses/curses_utils/: __init__.py  list2.py  list3.py
